ejabberd-modules (1:20170321-0.1) unstable; urgency=low

  * Version bump from upstream.
  * Add watch file.

 -- Mathias Ertl <mati@jabber.at>  Fri, 06 Oct 2017 13:39:54 +0200

ejabberd-modules (1:20170321-0.1) unstable; urgency=low

  * Version bump from upstream.

 -- Mathias Ertl <mati@jabber.at>  Wed, 21 Mar 2017 13:46:41 +0100

ejabberd-modules (1:20160807-0.1) unstable; urgency=low

  * Version bump from upstream.
  * Add mod_pottymouth and mod_grafite.

 -- Mathias Ertl <mati@jabber.at>  Sun, 07 Aug 2016 12:07:29 +0200

ejabberd-modules (1:20160525-0.1) unstable; urgency=low

  * Version bump from upstream.
  * Remove deprecated mod_mam_mnesia.

 -- Mathias Ertl <mati@jabber.at>  Wed, 25 May 2016 16:51:20 +0200

ejabberd-modules (1:20160131-0.1) unstable; urgency=low

  * Version bump from upstream.
  * Fix for ejabberd-mod-rest.
  * Install modules to /usr/lib/ejabberd-contrib, as ejabberd cannot find
    /usr/lib/ejabberd.

 -- Mathias Ertl <mati@jabber.at>  Sun, 31 Jan 2016 11:38:06 +0100

ejabberd-modules (1:20151209-0.1) unstable; urgency=low

  * Version bump from upstream.
  * Remove ejabberd-mod-http-upload (included in ejabberd core).
  * Switch to 0.1 as Debian revision.

 -- Mathias Ertl <mati@jabber.at>  Thu, 03 Dec 2015 11:52:29 +0100

ejabberd-modules (1:20150916-1) unstable; urgency=low

  * Version bump from upstream.

 -- Mathias Ertl <mati@jabber.at>  Wed, 23 Sep 2015 16:56:35 +0200

ejabberd-modules (1:20150827-1) unstable; urgency=low

  * Massive updates to ejabberd-mod-auth-http.
  * Add ejabberd-mod-http-upload.
  * Remove ejabberd-mod-mam (transitional package).
  * Install correct documentation for ejabberd-mod-mam-mnesia.
  * Various bugfixes for ejabberd-mod-mam-mnesia and ejabberd-mod-statsdx.

 -- Mathias Ertl <mati@jabber.at>  Fri, 28 Aug 2015 11:20:38 +0200

ejabberd-modules (1:20150702-2) unstable; urgency=low

  * Build dependency for ejabberd is now versioned >= 15.04.