@@ -2,6 +2,7 @@ ejabberd-modules (1:20170321-0.1) unstable; urgency=low
 
   * Version bump from upstream.
   * Add watch file.
+  * Update rules file.
 
  -- Mathias Ertl <mati@jabber.at>  Fri, 06 Oct 2017 13:39:54 +0200
 
